Tmp dir mapping for Win Docker containers, per TW-74212